<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- BUTTONS -->
    <Spinner
	    android:id="@+id/muses_spinner"
	    android:layout_width="match_parent"
	    android:layout_height="60dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <Button
            android:id="@+id/refresh"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/refresh"
            android:layout_gravity="top" />
	    <Button
	        android:id="@+id/connect"
	        android:layout_width="100dp"
	        android:layout_height="40dp"
	        android:text="@string/connect"
            android:layout_gravity="top" />
	    <Button
	        android:id="@+id/disconnect"
	        android:layout_width="120dp"
	        android:layout_height="40dp"
	        android:text="@string/disconnect"
            android:layout_gravity="top" />

    </LinearLayout>


    <!-- CONNECTION STATUS -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/status" />
        <TextView
            android:id="@+id/con_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/undefined" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/R"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton android:layout_width="88px"
            android:layout_height="91px"
            android:id="@+id/spotPause"/>
        <ImageButton android:layout_width="88px"
            android:layout_height="91px"
            android:id="@+id/next"/>
        <TextView android:text="@string/SongInfo" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Songinfo" />
    </LinearLayout>
    <!-- START OF OUR DISPLAY TEXT CODE -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/waves_label" />
        </LinearLayout>

        <!-- VALUES BELOW -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/alpha_label" />
            <TextView
                android:id="@+id/alpha_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/init_val" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/beta_label" />
            <TextView
                android:id="@+id/beta_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/init_val" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/gamma_label" />
            <TextView
                android:id="@+id/gamma_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/init_val" />

        </LinearLayout>
    </LinearLayout>


    <!-- VERSION -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <!-- VALUES BELOW -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/version"
                android:layout_gravity="bottom" />
            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/undefined"
                android:layout_gravity="bottom" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/pause"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:layout_gravity="center_horizontal" />


    <!-- PAUSE/RESUME -->


</LinearLayout>